--- a/node/package.json
+++ b/node/package.json
@@ -3,13 +3,15 @@
     "co-body": "^6.0.0",
     "joi": "^17.6.0",
     "ramda": "^0.25.0",
-    "throttled-queue": "^2.1.4"
+    "throttled-queue": "^2.1.4",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/co-body": "^0.0.3",
     "@types/jest": "^24.0.18",
     "@types/node": "^12.0.0",
     "@types/ramda": "types/npm-ramda#dist",
+    "@types/uuid": "^8.3.4",
     "@vtex/api": "6.45.12",
     "@vtex/test-tools": "^1.0.0",
     "@vtex/tsconfig": "^0.5.6",
